--- a/frontend/src/admin/admin.html
+++ b/frontend/src/admin/admin.html
@@ -31,7 +31,7 @@
 
       .container {
         padding: 30px;
-        max-width: 1200px;
+        max-width: 1400px;
         margin: auto;
       }
 
@@ -110,6 +110,26 @@
         font-weight: bold;
       }
 
+      .risk-low {
+        color: green;
+        font-weight: bold;
+      }
+
+      .risk-medium {
+        color: orange;
+        font-weight: bold;
+      }
+
+      .risk-high {
+        color: red;
+        font-weight: bold;
+      }
+
+      .loading {
+        color: #555;
+        font-style: italic;
+      }
+
       /* Modal Styles */
       #ledgerModal {
         display: none;
@@ -182,6 +202,9 @@
               <th>Hash</th>
               <th>Integrity</th>
               <th>Deleted?</th>
+              <th>Risk Score</th>
+              <th>Risk Level</th>
+              <th>Risk Reason</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -226,18 +249,83 @@
         window.location.href = "../../login.html";
       }
 
+      function previewDoc(id) {
+        window.open(`http://127.0.0.1:8000/documents/${id}/preview`, "_blank");
+      }
+
+      function getRiskClass(level) {
+        if (level === "LOW") return "risk-low";
+        if (level === "MEDIUM") return "risk-medium";
+        if (level === "HIGH") return "risk-high";
+        return "";
+      }
+
+      // ✅ Cache risk results so same email won't call API again
+      const riskCache = {};
+
+      async function fetchRiskScore(email) {
+        try {
+          if (!email) {
+            return { risk_score: "-", risk_level: "N/A", risk_reason: "-" };
+          }
+
+          if (riskCache[email]) {
+            return riskCache[email];
+          }
+
+          const res = await fetch(
+            `http://127.0.0.1:8000/users/${email}/risk-score`,
+            {
+              headers: { Authorization: "Bearer " + token },
+            },
+          );
+
+          if (!res.ok) {
+            const fallback = {
+              risk_score: "-",
+              risk_level: "N/A",
+              risk_reason: "Not calculated",
+            };
+            riskCache[email] = fallback;
+            return fallback;
+          }
+
+          const data = await res.json();
+
+          const result = {
+            risk_score: data.risk_score ?? "-",
+            risk_level: data.risk_level ?? "N/A",
+            risk_reason: data.risk_reason ?? "-",
+          };
+
+          riskCache[email] = result;
+          return result;
+        } catch (err) {
+          return { risk_score: "-", risk_level: "N/A", risk_reason: "-" };
+        }
+      }
+
       async function loadDocuments() {
+        const table = document.getElementById("docsTable");
+        table.innerHTML = `<tr><td colspan="11" class="loading">Loading documents...</td></tr>`;
+
         const res = await fetch("http://127.0.0.1:8000/documents", {
           headers: { Authorization: "Bearer " + token },
         });
 
+        if (!res.ok) {
+          table.innerHTML = `<tr><td colspan="11">Failed to load documents ❌</td></tr>`;
+          return;
+        }
+
         const docs = await res.json();
         docs.sort((a, b) => a.id - b.id);
 
-        const table = document.getElementById("docsTable");
         table.innerHTML = "";
 
-        docs.forEach((doc, i) => {
+        for (let i = 0; i < docs.length; i++) {
+          const doc = docs[i];
+
           const integrity = doc.tampered
             ? `<span class="tampered">❌ Tampered</span>`
             : `<span class="verified">✅ Verified</span>`;
@@ -251,30 +339,53 @@
             restoreButton = `<button class="restore-btn" onclick="restoreDoc(${doc.id})">Restore</button><br>`;
           }
 
+          let deleteButton = "";
+          if (doc.is_deleted === false) {
+            deleteButton = `<button class="delete-btn" onclick="deleteDoc(${doc.id})">Delete</button>`;
+          }
+
+          // Temporary row with loading risk
+          const rowId = `riskrow-${doc.id}`;
+
           table.innerHTML += `
-            <tr>
+            <tr id="${rowId}">
               <td>${i + 1}</td>
-              <td>${doc.filename}</td>
-              <td>${doc.owner_email}</td>
-              <td>${doc.status}</td>
-              <td class="hash">${doc.file_hash}</td>
+              <td>${doc.filename ?? "-"}</td>
+              <td>${doc.owner_email ?? "-"}</td>
+              <td>${doc.status ?? "-"}</td>
+              <td class="hash">${doc.file_hash ?? "-"}</td>
               <td>${integrity}</td>
               <td>${deletedStatus}</td>
+
+              <td class="loading">Loading...</td>
+              <td class="loading">Loading...</td>
+              <td class="loading">Loading...</td>
 
               <td>
                 <button class="preview-btn" onclick="previewDoc(${doc.id})">Preview</button>
                 <button class="ledger-btn" onclick="viewLedger(${doc.id})">View Ledger</button>
                 <br>
                 ${restoreButton}
-                <button class="delete-btn" onclick="deleteDoc(${doc.id})">Delete</button>
+                ${deleteButton}
               </td>
             </tr>
           `;
-        });
-      }
 
-      function previewDoc(id) {
-        window.open(`http://127.0.0.1:8000/documents/${id}/preview`, "_blank");
+          // Fetch risk score and update row
+          const risk = await fetchRiskScore(doc.owner_email);
+          const riskLevelClass = getRiskClass(risk.risk_level);
+
+          const row = document.getElementById(rowId);
+          if (row) {
+            row.children[7].innerHTML = risk.risk_score;
+            row.children[8].innerHTML = `<span class="${riskLevelClass}">${risk.risk_level}</span>`;
+            row.children[9].innerHTML = risk.risk_reason;
+          }
+        }
+
+        if (docs.length === 0) {
+          table.innerHTML = `<tr><td colspan="11">No documents found</td></tr>`;
+        }
       }
 
       async function deleteDoc(id) {
@@ -329,19 +440,23 @@
           }
 
           const data = await res.json();
-
           let rows = "";
-          data.forEach((entry) => {
-            rows += `
-              <tr>
-                <td>${entry.id}</td>
-                <td>${entry.action}</td>
-                <td>${entry.actor_email}</td>
-                <td>${entry.timestamp}</td>
-                <td>${JSON.stringify(entry.event_data)}</td>
-              </tr>
-            `;
-          });
+
+          if (data.length === 0) {
+            rows = `<tr><td colspan="5" style="text-align:center;">No ledger history found</td></tr>`;
+          } else {
+            data.forEach((entry) => {
+              rows += `
+                <tr>
+                  <td>${entry.id}</td>
+                  <td>${entry.action}</td>
+                  <td>${entry.actor_email}</td>
+                  <td>${entry.timestamp}</td>
+                  <td>${JSON.stringify(entry.event_data)}</td>
+                </tr>
+              `;
+            });
+          }
 
           document.getElementById("ledgerTableBody").innerHTML = rows;
           document.getElementById("ledgerModal").style.display = "flex";
@@ -354,6 +469,14 @@
       function closeLedgerModal() {
         document.getElementById("ledgerModal").style.display = "none";
       }
+
+      document
+        .getElementById("ledgerModal")
+        .addEventListener("click", function (e) {
+          if (e.target.id === "ledgerModal") {
+            closeLedgerModal();
+          }
+        });
 
       loadDocuments();
     </script>
