--- a/frontend/src/bank/bank.html
+++ b/frontend/src/bank/bank.html
@@ -31,7 +31,7 @@
 
       .container {
         padding: 30px;
-        max-width: 1200px;
+        max-width: 1400px;
         margin: auto;
       }
 
@@ -99,6 +99,21 @@
       }
 
       .tampered {
+        color: red;
+        font-weight: bold;
+      }
+
+      .risk-low {
+        color: green;
+        font-weight: bold;
+      }
+
+      .risk-medium {
+        color: orange;
+        font-weight: bold;
+      }
+
+      .risk-high {
         color: red;
         font-weight: bold;
       }
@@ -174,9 +189,13 @@
             <tr>
               <th>#</th>
               <th>File</th>
+              <th>Owner</th>
               <th>Hash</th>
               <th>Status</th>
               <th>Integrity</th>
+              <th>Risk Score</th>
+              <th>Risk Level</th>
+              <th>Risk Reason</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -221,6 +240,46 @@
         window.location.href = "../../login.html";
       }
 
+      function previewDoc(id) {
+        window.open(`http://127.0.0.1:8000/documents/${id}/preview`, "_blank");
+      }
+
+      function getRiskClass(level) {
+        if (level === "LOW") return "risk-low";
+        if (level === "MEDIUM") return "risk-medium";
+        if (level === "HIGH") return "risk-high";
+        return "";
+      }
+
+      async function fetchRiskScore(email) {
+        try {
+          if (!email) {
+            return { risk_score: "-", risk_level: "N/A", risk_reason: "-" };
+          }
+
+          const res = await fetch(
+            `http://127.0.0.1:8000/users/${email}/risk-score`,
+            {
+              headers: { Authorization: "Bearer " + token },
+            },
+          );
+
+          if (!res.ok) {
+            return { risk_score: "-", risk_level: "N/A", risk_reason: "-" };
+          }
+
+          const data = await res.json();
+
+          return {
+            risk_score: data.risk_score ?? "-",
+            risk_level: data.risk_level ?? "N/A",
+            risk_reason: data.risk_reason ?? "-",
+          };
+        } catch (err) {
+          return { risk_score: "-", risk_level: "N/A", risk_reason: "-" };
+        }
+      }
+
       async function loadDocuments() {
         const res = await fetch("http://127.0.0.1:8000/documents", {
           headers: { Authorization: "Bearer " + token },
@@ -232,15 +291,21 @@
         const table = document.getElementById("docsTable");
         table.innerHTML = "";
 
-        docs.forEach((doc, i) => {
+        for (let i = 0; i < docs.length; i++) {
+          const doc = docs[i];
+
           const integrity = doc.tampered
             ? `<span class="tampered">❌ Tampered</span>`
             : `<span class="verified">✅ Verified</span>`;
+
+          const risk = await fetchRiskScore(doc.owner_email);
+          const riskClass = getRiskClass(risk.risk_level);
 
           table.innerHTML += `
             <tr>
               <td>${i + 1}</td>
               <td>${doc.filename}</td>
+              <td>${doc.owner_email ?? "-"}</td>
               <td class="hash">${doc.file_hash}</td>
 
               <td>
@@ -253,6 +318,10 @@
 
               <td>${integrity}</td>
 
+              <td>${risk.risk_score}</td>
+              <td class="${riskClass}">${risk.risk_level}</td>
+              <td>${risk.risk_reason}</td>
+
               <td>
                 <button class="preview-btn" onclick="previewDoc(${doc.id})">Preview</button>
                 <button class="update-btn" onclick="updateStatus(${doc.id})">Update</button>
@@ -263,11 +332,7 @@
               </td>
             </tr>
           `;
-        });
-      }
-
-      function previewDoc(id) {
-        window.open(`http://127.0.0.1:8000/documents/${id}/preview`, "_blank");
+        }
       }
 
       async function updateStatus(id) {
@@ -319,17 +384,22 @@
           const data = await res.json();
 
           let rows = "";
-          data.forEach((entry) => {
-            rows += `
-              <tr>
-                <td>${entry.id}</td>
-                <td>${entry.action}</td>
-                <td>${entry.actor_email}</td>
-                <td>${entry.timestamp}</td>
-                <td>${JSON.stringify(entry.event_data)}</td>
-              </tr>
-            `;
-          });
+
+          if (data.length === 0) {
+            rows = `<tr><td colspan="5" style="text-align:center;">No ledger history found</td></tr>`;
+          } else {
+            data.forEach((entry) => {
+              rows += `
+                <tr>
+                  <td>${entry.id}</td>
+                  <td>${entry.action}</td>
+                  <td>${entry.actor_email}</td>
+                  <td>${entry.timestamp}</td>
+                  <td>${JSON.stringify(entry.event_data)}</td>
+                </tr>
+              `;
+            });
+          }
 
           document.getElementById("ledgerTableBody").innerHTML = rows;
           document.getElementById("ledgerModal").style.display = "flex";
